[gd_scene load_steps=7 format=3 uid="uid://c2q3w8rb1e31l"]

[ext_resource type="Script" uid="uid://de8fbmtpnxj4r" path="res://scripts/enemy/score_bar.gd" id="1_8juob"]
[ext_resource type="Theme" uid="uid://dvunoh38j5ne6" path="res://ui/base_theme.tres" id="1_bak1h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vxv1r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxv1r"]
bg_color = Color(0.176471, 0, 0.819608, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_snxki"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_snxki"]
bg_color = Color(0.709804, 0, 0.227451, 1)

[node name="Score" type="Container"]
custom_minimum_size = Vector2(1024, 80)
theme = ExtResource("1_bak1h")
script = ExtResource("1_8juob")

[node name="TopBorder1P" type="ColorRect" parent="."]
custom_minimum_size = Vector2(500, 10)
layout_mode = 2
color = Color(0.175577, 7.70092e-07, 0.819191, 1)

[node name="TopBorder2P" type="ColorRect" parent="."]
custom_minimum_size = Vector2(500, 10)
layout_mode = 2
color = Color(0.708072, 0, 0.227131, 1)

[node name="ScoreBar1P" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxEmpty_vxv1r")
theme_override_styles/fill = SubResource("StyleBoxFlat_vxv1r")
max_value = 1.0
fill_mode = 1
show_percentage = false

[node name="ScoreBar2P" type="ProgressBar" parent="."]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxEmpty_snxki")
theme_override_styles/fill = SubResource("StyleBoxFlat_snxki")
max_value = 1.0
show_percentage = false

[node name="ScoreDiff" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="RichTextLabel" type="RichTextLabel" parent="ScoreDiff"]
layout_mode = 2
text = "100"
scroll_active = false
horizontal_alignment = 2
vertical_alignment = 1

[node name="Score1P" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_right = 10

[node name="RichTextLabel" type="RichTextLabel" parent="Score1P"]
layout_mode = 2
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Score2P" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="RichTextLabel" type="RichTextLabel" parent="Score2P"]
layout_mode = 2
text = "100
"
scroll_active = false
vertical_alignment = 1
